[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2021"
name = "pagepal"
resolver = "2"
version = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# debug = true

[dependencies]
gfx = "0.18.3"
gfx_device_gl = "0.16.2"
sdl2 = "0.35.2"
shader_version = "0.7.0"

conrod_core = "0.76.1"
conrod_piston = "0.76.1"
# piston2d-deform_grid = "0.10.0"
piston2d-gfx_graphics = "0.79.0"
piston2d-graphics = "0.43.0"
piston_window = { version = "0.128.0", default-features = false }
pistoncore-window = "0.47.1"

indexmap = { version = "1.9.3", features = ["rayon"] }
itertools = "0.10.5"
select = "0.6.0"

reqwest = { version = "0.11.18", features = ["cookies", "stream"] }
tokio = { version = "1.28.2", features = ["net", "fs", "macros", "rt-multi-thread"] }
url = "2.3.1"

average = "0.13.1"
num-bigint = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["json"] }

# array-macro = "2.1.0"
config = "0.13.3"
directories-next = "2.0.0"
find_folder = "0.3.0"
# levenshtein = "1.0.5"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
